...
                    android:contentDescription="@string/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:srcCompat="@drawable/ic_account_default_photo" />

                <TextView
                    android:id="@+id/textViewSenderAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_content_small"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:layout_marginEnd="@dimen/default_margin_small"
                    android:ellipsize="middle"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/default_text_size_big"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonReplyAll"
                    app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_goneMarginLeft="@dimen/default_margin_medium"
                    tools:text="sender@flowcrypt.com" />

                <ImageButton
                    android:id="@+id/imageButtonReplyAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:layout_marginEnd="@dimen/default_margin_content_small"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/reply_all"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonMoreOptions"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:srcCompat="@drawable/ic_reply_all"
                    app:layout_goneMarginRight="@dimen/default_margin_medium"
                    tools:tint="@color/gray"
                    tools:visibility="visible" />

...
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_goneMarginRight="@dimen/default_margin_medium"
                    app:srcCompat="@drawable/ic_more_vert_gray_32dp"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textViewSubject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textAlignment="textStart"
                    android:textColor="@color/dark"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewLabels" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/default_text_size_medium"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/tVTo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewSenderAddress"
                    app:layout_constraintTop_toTopOf="@+id/tVTo"
                    tools:text="1:05 PM" />

                <ImageButton
...
                    app:layout_constraintTop_toBottomOf="@+id/iBShowDetails"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_mime_header"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rVPgpBadges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
                        android:id="@+id/layoutSecurityWarnings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                    <com.flowcrypt.email.ui.widget.EmailWebView
                        android:id="@+id/emailWebView"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

...
