...
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="attachment">Attachment</string>
    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
    <string name="cancel">Cancel</string>
...
    <string name="attachments">Attachments</string>
    <string name="download_attachments_notification_channel">The download attachments notification channel</string>
    <string name="decrypt_error_could_not_open_message">Could not open this message with %1$s.</string>
    <string name="decrypt_error_message_badly_formatted">Message is either badly formatted or not compatible with %1$s.</string>
    <string name="decrypt_error_please_write_me">Please write us at %1$s so that we can fix it for you.</string>
    <string name="your_keys_cannot_open_this_message">Your keys cannot open this message</string>
    <string name="decrypt_error_current_key_cannot_open_message">Your current key cannot open this message. If you
        have any other keys available, you should import them now.</string>
    <string name="from">From</string>
    <string name="show_original_message">Show original content</string>
    <string name="hide_original_message">Hide original content</string>
    <string name="import_missing_key">Import missing key</string>
    <string name="loading_backups">Loading backups</string>
...
    <string name="setup_app">Please set up the app before use this option</string>
    <plurals name="not_recovered_all_keys">
        <item quantity="one">%1$d of %2$d keys successfully unlocked. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
        <item quantity="other">%1$d of %2$d keys successfully unlocked. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
    </plurals>
    <string name="hint_when_found_keys_in_email">%1$s found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\nPlease enter pass phrase(s) that you used when the backup was made.</string>
    <string name="forward">Forward</string>
    <string name="forward_encrypted">Forward\nEncrypted</string>
    <string name="reply_encrypted">Reply\nEncrypted</string>
    <string name="reply_all_encrypted">Reply All\nEncrypted</string>
    <string name="forward_template">\n\n---------- Forwarded message ----------\nFrom: %1$s\nDate: %2$s\nSubject: %3$s\nTo: %4$s\n</string>
    <string name="failed_please_try_again_later">Failed. Please try again later</string>
    <string name="cyrillic_search_not_support_yet">Searching with foreign alphabets not supported yet</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_public_keys_of_your_contacts">Add public keys of your contacts to send them encrypted messages.</string>
    <string name="search_by_key_id_or_email">Search by key id or email</string>
...
    <plurals name="loaded_private_keys_from_clipboard">
        <item quantity="one">Loaded private key from your clipboard</item>
        <item quantity="other">Loaded %1$d private keys from your clipboard</item>
    </plurals>
    <string name="select_only_one_key">Select a source that stores only one key</string>
    <string name="no_conn_msg_sent_later">Offline. The message will be sent later</string>
    <string name="me">me</string>
    <string name="sending">Sending&#8230;</string>
    <string name="queued">Queued</string>
    <string name="cache_error">Can\'t send message: cache problem</string>
    <string name="can_not_delete_sending_message">You can\'t delete a message which is now being sent</string>
    <string name="preparing">Preparing&#8230;</string>
    <string name="back_up_my_key">Back up my key</string>
...
    <string name="details">Details</string>
    <string name="reply_to">Reply To</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="date">Date</string>
    <string name="to_receiver">To %1$s</string>
    <string name="and_others">and others&#8230;</string>
    <string name="save_pass_phrase">Save pass phrase</string>
    <string name="remember_pass_phrase_temporarily">Remember pass phrase temporarily</string>
    <string name="pass_phrase_not_provided">Pass phrase is not provided</string>
    <string name="forget_passphrase">Forget pass phrase</string>
    <string name="provide_passphrase">Provide pass phrase</string>
...
