...
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAtt"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_attachment_item"
    android:layout_gravity="center"
    android:background="@drawable/bg_att"
    android:clickable="true"
    android:focusable="true">
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_attachment" />

    <TextView
        android:id="@+id/textViewAttachmentName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_small"
        android:layout_marginEnd="@dimen/default_margin_small"
        android:ellipsize="middle"
        android:singleLine="true"
...
        app:layout_constraintStart_toEndOf="@+id/imageViewAttIcon"
        app:layout_constraintTop_toTopOf="@+id/actionButtons"
        tools:text="Some very very very very very very very very large file name.txt" />


    <TextView
        android:id="@+id/textViewAttSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size_very_small"
        app:layout_constraintBottom_toBottomOf="@+id/actionButtons"
        app:layout_constraintStart_toStartOf="@+id/textViewAttachmentName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAttachmentName"
...
